--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,30 @@
 {
-    "name": "laravel/laravel",
+    "name": "dipyapp/dipy-api",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
-    "license": "MIT",
+    "description": "DipyApp API",
+    "keywords": ["dipyapp", "dipyappapi", "api"],
+    "license": "proprietary",
     "require": {
         "php": "^8.2",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.19",
-        "laravel/sanctum": "^3.0",
-        "laravel/socialite": "^5.5",
-        "laravel/tinker": "^2.7",
+        "filament/filament": "^2.0",
+        "guzzlehttp/guzzle": "^7.5",
+        "laravel/framework": "^9.44",
+        "laravel/octane": "^1.3",
+        "laravel/sanctum": "^3.0.1",
+        "laravel/socialite": "^5.5.6",
+        "laravel/tinker": "^2.7.3",
+        "spatie/laravel-data": "^2.2",
         "tuupola/ksuid": "^2.1"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.12",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "fakerphp/faker": "^1.21",
+        "friendsofphp/php-cs-fixer": "^3.13",
+        "laravel/pint": "^1.3",
+        "laravel/sail": "^1.16.5",
+        "mockery/mockery": "^1.5.1",
+        "nunomaduro/collision": "^6.3.1",
+        "phpunit/phpunit": "^9.5.27",
+        "spatie/laravel-ignition": "^1.6.2"
     },
     "autoload": {
         "psr-4": {
@@ -44,7 +47,8 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
+            "@php artisan filament:upgrade"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
