--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": "dipyapp/dipy-api",
+    "name": "bytezest/laravel_modular_template",
     "type": "project",
-    "description": "DipyApp API",
-    "keywords": ["dipyapp", "dipyappapi", "api"],
-    "license": "proprietary",
+    "description": "Laravel Modular",
+    "keywords": ["laravel", "modular", "api", "template", "filament"],
+    "license": "MIT",
     "require": {
         "php": "^8.2",
-        "filament/filament": "^2.0",
+        "filament/filament": "^3.0",
         "guzzlehttp/guzzle": "^7.5",
-        "laravel/framework": "^9.44",
-        "laravel/octane": "^1.3",
-        "laravel/sanctum": "^3.0.1",
+        "laravel/framework": "^10.18",
+        "laravel/octane": "^1.5",
+        "laravel/sanctum": "^3.2",
         "laravel/socialite": "^5.5.6",
         "laravel/tinker": "^2.7.3",
         "spatie/laravel-data": "^2.2",
@@ -22,9 +22,9 @@
         "laravel/pint": "^1.3",
         "laravel/sail": "^1.16.5",
         "mockery/mockery": "^1.5.1",
-        "nunomaduro/collision": "^6.3.1",
-        "phpunit/phpunit": "^9.5.27",
-        "spatie/laravel-ignition": "^1.6.2"
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.3",
+        "spatie/laravel-ignition": "^2.2"
     },
     "autoload": {
         "psr-4": {
@@ -72,6 +72,6 @@
             "pestphp/pest-plugin": true
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
