--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "filament/filament": "^3.0",
+        "filament/filament": "^3.0-stable",
         "guzzlehttp/guzzle": "^7.5",
         "laravel/framework": "^10.18",
         "laravel/octane": "^1.5",
@@ -18,6 +18,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.21",
+        "filament/upgrade": "^3.0-stable",
         "friendsofphp/php-cs-fixer": "^3.13",
         "laravel/pint": "^1.3",
         "laravel/sail": "^1.16.5",
@@ -72,6 +73,6 @@
             "pestphp/pest-plugin": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
